# simple_twitch_tts

./: Cargo.toml  README.md
bot_commands/: hello.toml
config/: BotVoice_config.toml  MSVoice_config.toml  TTSVoiceTemplate_config.toml  TwitchClient_config.toml  UserDatabase_config.toml  UserSpeechTemplate_config.toml
src/: audio_player.rs  colors.rs  com.rs  commands.rs  config_manager.rs  irc_parser.rs  macros.rs  main.rs  tts.rs  tts_player.rs  twitch_client.rs  users_manager.rs
